--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,15 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/index.py",
+      "src": "api/*.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
+    {
+      "src": "/test",
+      "dest": "/api/test.py"
+    },
     {
       "src": "/(.*)",
       "dest": "/api/index.py"
@@ -15,6 +19,9 @@
   "functions": {
     "api/index.py": {
       "maxDuration": 30
+    },
+    "api/test.py": {
+      "maxDuration": 10
     }
   },
   "env": {
