--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
     {
       "src": "/hello",
       "dest": "/api/hello.py"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/api/hello.py"
     }
   ],
   "functions": {
