--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,7 @@
     }
   },
   "rewrites": [
-    { "source": "/(.*)", "destination": "/api/index.py" }
+    { "source": "/api/(.*)", "destination": "/api/index.py" },
+    { "source": "/(.*)", "destination": "/dynamic_viewer.html" }
   ]
 }
