Clean up project structure: remove dynamic_viewer.html, update all references to use embedded frontend in index.py

--- a/vercel.json
+++ b/vercel.json
@@ -7,6 +7,6 @@
   },
   "rewrites": [
     { "source": "/api/(.*)", "destination": "/api/index.py" },
-    { "source": "/", "destination": "/dynamic_viewer.html" }
+    { "source": "/", "destination": "/api/index.py" }
   ]
 }
