🚀 Complete API Refactoring: Modular Architecture Implementation
- Refactored monolithic API into clean modular structure
- Created separate routes, services, models, middleware, and utils
- Added comprehensive API documentation and examples
- Implemented proper separation of concerns
- Maintained backward compatibility with existing endpoints
- Added authentication middleware for protected endpoints
- Created interactive web interface with static files
- Updated configuration and documentation
- Removed unused/outdated files
- Improved maintainability and extensibility

--- a/config/scraper_config.json
+++ b/config/scraper_config.json
@@ -1,6 +1,6 @@
 {
   "scraper_settings": {
-    "force_rescrape": false,
+    "force_rescrape": true,
     "enable_logs": true,
     "save_format": "json"
   },
