--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
   "functions": {
-    "api/index.py": {
+    "api/main.py": {
       "maxDuration": 60,
       "memory": 1024
     }
   },
   "rewrites": [
-    { "source": "/api/(.*)", "destination": "/api/index.py" },
-    { "source": "/", "destination": "/api/index.py" }
+    { "source": "/api/(.*)", "destination": "/api/main.py" },
+    { "source": "/", "destination": "/api/main.py" }
   ]
 }
